--- a/bitrise.yml
+++ b/bitrise.yml
@@ -5,9 +5,9 @@ app:
   envs:
   # If you want to share this step into a StepLib
   - BITRISE_STEP_ID: android-sdk-add-on-installer
-  - BITRISE_STEP_VERSION: "0.0.1"
+  - BITRISE_STEP_VERSION: $BITRISE_STEP_VERSION
   - BITRISE_STEP_GIT_CLONE_URL: https://github.com/FutureWorkshops/bitrise-step-android-sdk-add-on-installer.git
-  - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
+  - MY_STEPLIB_REPO_FORK_GIT_URL: git@github.com:FutureWorkshops/bitrise-steplib.git
 
 workflows:
   test:
@@ -60,6 +60,8 @@ workflows:
   # ----------------------------------------------------------------
   # --- workflows to Share this step into a Step Library
   audit-this-step:
+    before_run:
+    - test
     steps:
     - script:
         inputs:
